Labs/Lab3- Create Default Deny NP and Additive NP to Allow few ports/mtdoom-np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mtdoom-np
  namespace: mordor
spec:
  podSelector:
    matchLabels:
      app: mtdoom
  policyType: ["Ingress"]
  ingress:
  - ingress:
      - from:
        - namespaceSelector:
            matchLabels:
              app: frodo
        - podSelector:
            matchLabels:
              app: sam
        ports:
        - protocol: TCP
          port: 80
